sandbox strategy 수정

--- a/deploy/overlays/sandbox/deployment.yml
+++ b/deploy/overlays/sandbox/deployment.yml
@@ -3,6 +3,9 @@ kind: Deployment
 metadata:
   name: odya-api
 spec:
+  strategy:
+    type: Recreate
+    rollingUpdate: null
   template:
     spec:
       containers:
