배포 파일 수정

--- a/deploy/overlays/stable/ingress.yml
+++ b/deploy/overlays/stable/ingress.yml
@@ -12,7 +12,7 @@ spec:
   - host: jayden-bin.kro.kr
     http:
       paths:
-      - path: /
+      - path: /(api|test|docs)/*
         pathType: Prefix
         backend:
           service:
