--- a/deploy/overlays/sandbox/ingress.yml
+++ b/deploy/overlays/sandbox/ingress.yml
@@ -7,12 +7,13 @@ metadata:
     ingress.kubernetes.io/rewrite-target: /
     nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
     nginx.ingress.kubernetes.io/ssl-redirect: "true"
+    nginx.ingress.kubernetes.io/use-regex: "true"
 spec:
   rules:
   - host: sandbox.jayden-bin.kro.kr
     http:
       paths:
-      - path: /
+      - path: /(api|test|docs)/*
         pathType: Prefix
         backend:
           service:
