--- a/deploy/overlays/stable/ingress.yml
+++ b/deploy/overlays/stable/ingress.yml
@@ -7,6 +7,7 @@ metadata:
     ingress.kubernetes.io/rewrite-target: /
     nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
     nginx.ingress.kubernetes.io/ssl-redirect: "true"
+    nginx.ingress.kubernetes.io/use-regex: "true"
 spec:
   rules:
   - host: jayden-bin.kro.kr
