배포 타임아웃 상향

--- a/deploy/base/deployment.yml
+++ b/deploy/base/deployment.yml
@@ -3,6 +3,7 @@ kind: Deployment
 metadata:
   name: odya-api
 spec:
+  progressDeadlineSeconds: 900
   selector:
     matchLabels:
       app: odya-api
