--- a/deploy/overlays/stable/ingress.yml
+++ b/deploy/overlays/stable/ingress.yml
@@ -8,6 +8,7 @@ metadata:
     nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
     nginx.ingress.kubernetes.io/ssl-redirect: "true"
     nginx.ingress.kubernetes.io/use-regex: "true"
+    nginx.ingress.kubernetes.io/proxy-body-size: 50mb
 spec:
   rules:
   - host: jayden-bin.kro.kr
