nodeSelector 설정 최신화

--- a/deploy/overlays/sandbox/deployment.yml
+++ b/deploy/overlays/sandbox/deployment.yml
@@ -15,4 +15,4 @@ spec:
             - name: APP_PHASE
               value: sandbox
       nodeSelector:
-        performance: low
+        performance: high
