--- a/deploy/base/service.yml
+++ b/deploy/base/service.yml
@@ -2,6 +2,11 @@ apiVersion: v1
 kind: Service
 metadata:
   name: odya-api-svc
+  annotations:
+    prometheus/scrape: "true"
+    prometheus/scheme: "http"
+    prometheus/port: "8888"
+    prometheus/path: "/actuator/prometheus"
 spec:
   ports:
     - port: 80
