--- a/jenkins/Dockerfile-jenkins
+++ b/jenkins/Dockerfile-jenkins
@@ -3,7 +3,7 @@ FROM jenkins/jenkins:jdk17
 
 USER root
 
-RUN apt-get update
+RUN apt-get update && apt-get upgrade -y
 
 RUN curl -fsSL https://get.docker.com/ | sh
 
