--- a/jenkins/Dockerfile-jenkins
+++ b/jenkins/Dockerfile-jenkins
@@ -15,6 +15,8 @@ RUN mv kustomize /usr/local/bin/
 
 RUN install -o root -g root -m 0755 kubectl /usr/local/bin/kubectl
 
+RUN newgrp docker
+
 RUN usermod -aG docker jenkins
 
 USER jenkins
