잘못된 코드 수정

--- a/jenkins/Dockerfile-jenkins
+++ b/jenkins/Dockerfile-jenkins
@@ -15,7 +15,7 @@ RUN mv kustomize /usr/local/bin/
 
 RUN install -o root -g root -m 0755 kubectl /usr/local/bin/kubectl
 
-RUN newgrp docker
+RUN groupadd docker
 
 RUN usermod -aG docker jenkins
 
